<resources>
    <string name="app_name" translatable="false">Flags Quiz</string>
    <string name="welcome_enter_name">Please enter your name.</string>
    <string name="quiz_flag_question">What is the country of this flag?</string>
    <string name="welcome_welcome">Welcome</string>
    <string name="welcome_name">Name</string>
    <string name="quiz_flag_content">Country Flag.</string>
    <string name="quiz_progress" translatable="false">%1$d/%2$d</string>
    <string name="quiz_btn_finish">Finish</string>
    <string name="quiz_btn_submit">Submit</string>
    <string name="quiz_btn_next_flag">Next Flag</string>
    <string name="quiz_congrats">Congratulations %1$s!</string>
    <string name="quiz_trophy_content">Trophy Image</string>
    <string name="quiz_score">Your score is %1$d out of %2$d.</string>
    <string name="welcome_btn_continue">Continue</string>
    <string name="menu_rules">Rules</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="quiz_select_answer">Please select an answer.</string>
    <string name="quiz_heart_content">Heart Icon.</string>
    <string name="continent_africa">Africa</string>
    <string name="continent_asia" translatable="false">Asia</string>
    <string name="continent_europe">Europe</string>
    <string name="continent_north_america">North America</string>
    <string name="continent_oceania">Oceania</string>
    <string name="continent_south_america">South America</string>
    <string name="country_af_algeria">Algeria</string>
    <string name="country_af_angola" translatable="false">Angola</string>
    <string name="country_af_benin" translatable="false">Benin</string>
    <string name="country_af_botswana" translatable="false">Botswana</string>
    <string name="country_af_burkina_faso" translatable="false">Burkina Faso</string>
    <string name="country_af_burundi" translatable="false">Burundi</string>
    <string name="country_af_cameroon">Cameroon</string>
    <string name="country_af_cape_verde">Cape Verde</string>
    <string name="country_af_central_african_republic">Central African Republic</string>
    <string name="country_af_chad" translatable="false">Chad</string>
    <string name="country_af_comoros">Comoros</string>
    <string name="country_af_democatic_republic_congo">Democratic Republic of the Congo</string>
    <string name="country_af_republic_congo">Republic of the Congo</string>
    <string name="country_af_cote_d_ivoire">Cote d\'Ivoire</string>
    <string name="country_af_djibouti" translatable="false">Djibouti</string>
    <string name="country_af_egypt">Egypt</string>
    <string name="country_af_equatorial_guinea">Equatorial Guinea</string>
    <string name="country_af_eritrea" translatable="false">Eritrea</string>
    <string name="country_af_ethiopia">Ethiopia</string>
    <string name="country_af_gabon">Gabon</string>
    <string name="country_af_gambia" translatable="false">Gambia</string>
    <string name="country_af_ghana" translatable="false">Ghana</string>
    <string name="country_af_guinea_bissau" translatable="false">Guinea Bissau</string>
    <string name="country_af_guinea" translatable="false">Guinea</string>
    <string name="country_af_kenya">Kenya</string>
    <string name="country_af_lesotho">Lesotho</string>
    <string name="country_af_liberia" translatable="false">Liberia</string>
    <string name="country_af_libya">Libya</string>
    <string name="country_af_madagascar" translatable="false">Madagascar</string>
    <string name="country_af_malawi" translatable="false">Malawi</string>
    <string name="country_af_mali" translatable="false">Mali</string>
    <string name="country_af_mauritius">Mauritius</string>
    <string name="country_af_morocco">Morocco</string>
    <string name="country_af_mozambique" translatable="false">Mozambique</string>
    <string name="country_af_namibia" translatable="false">Namibia</string>
    <string name="country_af_niger">Niger</string>
    <string name="country_af_nigeria" translatable="false">Nigeria</string>
    <string name="country_af_rwanda">Rwanda</string>
    <string name="country_af_sao_tome_principe">Sao Tome and Principe</string>
    <string name="country_af_senegal" translatable="false">Senegal</string>
    <string name="country_af_seychelles" translatable="false">Seychelles</string>
    <string name="country_af_sierra_leone" translatable="false">Sierra Leone</string>
    <string name="country_af_somalia" translatable="false">Somalia</string>
    <string name="country_af_south_africa">South Africa</string>
    <string name="country_af_south_sudan">South Sudan</string>
    <string name="country_af_sudan">Sudan</string>
    <string name="country_af_swaziland">Swaziland</string>
    <string name="country_af_tanzania" translatable="false">Tanzania</string>
    <string name="country_af_togo" translatable="false">Togo</string>
    <string name="country_af_tunisia">Tunisia</string>
    <string name="country_af_uganda" translatable="false">Uganda</string>
    <string name="country_af_zambia" translatable="false">Zambia</string>
    <string name="country_af_zimbabwe">Zimbabwe</string>
    <string name="country_af_mauritania" translatable="false">Mauritania</string>
    <string name="country_as_afghanistan">Afghanistan</string>
    <string name="country_as_armenia" translatable="false">Armenia</string>
    <string name="country_as_azerbaijan">Azerbaijan</string>
    <string name="country_as_bahrain">Bahrain</string>
    <string name="country_as_bangladesh" translatable="false">Bangladesh</string>
    <string name="country_as_bhutan">Bhutan</string>
    <string name="country_as_brunei" translatable="false">Brunei</string>
    <string name="country_as_cambodia">Cambodia</string>
    <string name="country_as_china" translatable="false">China</string>
    <string name="country_as_cyprus">Cyprus</string>
    <string name="country_as_india" translatable="false">India</string>
    <string name="country_as_indonesia" translatable="false">Indonesia</string>
    <string name="country_as_iran" translatable="false">Iran</string>
    <string name="country_as_iraq">Iraq</string>
    <string name="country_as_israel" translatable="false">Israel</string>
    <string name="country_as_japan">Japan</string>
    <string name="country_as_jordan">Jordan</string>
    <string name="country_as_kazakhstan">Kazakhstan</string>
    <string name="country_as_kuwait" translatable="false">Kuwait</string>
    <string name="country_as_kyrgyzstan">Kyrgyzstan</string>
    <string name="country_as_laos" translatable="false">Laos</string>
    <string name="country_as_lebanon">Lebanon</string>
    <string name="country_as_malaysia">Malaysia</string>
    <string name="country_as_maldives">Maldives</string>
    <string name="country_as_mongolia" translatable="false">Mongolia</string>
    <string name="country_as_myanmar" translatable="false">Myanmar</string>
    <string name="country_as_nepal" translatable="false">Nepal</string>
    <string name="country_as_north_korea">North Korea</string>
    <string name="country_as_oman">Oman</string>
    <string name="country_as_pakistan">Pakistan</string>
    <string name="country_as_philippines">Philippines</string>
    <string name="country_as_qatar">Qatar</string>
    <string name="country_as_russia">Russia</string>
    <string name="country_as_saudi_arabia">Saudi Arabia</string>
    <string name="country_as_singapore">Singapore</string>
    <string name="country_as_south_korea">South Korea</string>
    <string name="country_as_sri_lanka" translatable="false">Sri Lanka</string>
    <string name="country_as_syria">Syria</string>
    <string name="country_as_taiwan">Taiwan</string>
    <string name="country_as_tajikistan">Tajikistan</string>
    <string name="country_as_thailand">Thailand</string>
    <string name="country_as_turkey">Turkey</string>
    <string name="country_as_turkmenistan">Turkmenistan</string>
    <string name="country_as_united_arab_emirates">United Arab Emirates</string>
    <string name="country_as_uzbekistan" translatable="false">Uzbekistan</string>
    <string name="country_as_vietnam" translatable="false">Vietnam</string>
    <string name="country_as_yemen" translatable="false">Yemen</string>
    <string name="country_eu_albania" translatable="false">Albania</string>
    <string name="country_eu_andorra" translatable="false">Andorra</string>
    <string name="country_eu_austria" translatable="false">Austria</string>
    <string name="country_eu_belarus">Belarus</string>
    <string name="country_eu_belgium">Belgium</string>
    <string name="country_eu_bosnia_and_herzegovina">Bosnia and Herzegovina</string>
    <string name="country_eu_bulgaria" translatable="false">Bulgaria</string>
    <string name="country_eu_croatia">Croatia</string>
    <string name="country_eu_czech_republic">Czech Republic</string>
    <string name="country_eu_denmark">Denmark</string>
    <string name="country_eu_estonia" translatable="false">Estonia</string>
    <string name="country_eu_finland">Finland</string>
    <string name="country_eu_france">France</string>
    <string name="country_eu_georgia" translatable="false">Georgia</string>
    <string name="country_eu_germany">Germany</string>
    <string name="country_eu_greece">Greece</string>
    <string name="country_eu_hungary">Hungary</string>
    <string name="country_eu_iceland">Iceland</string>
    <string name="country_eu_ireland">Ireland</string>
    <string name="country_eu_italy">Italy</string>
    <string name="country_eu_kosovo" translatable="false">Kosovo</string>
    <string name="country_eu_latvia">Latvia</string>
    <string name="country_eu_liechtenstein" translatable="false">Liechtenstein</string>
    <string name="country_eu_lithuania" translatable="false">Lithuania</string>
    <string name="country_eu_luxembourg">Luxembourg</string>
    <string name="country_eu_macedonia" translatable="false">Macedonia</string>
    <string name="country_eu_malta" translatable="false">Malta</string>
    <string name="country_eu_moldova">Moldova</string>
    <string name="country_eu_monaco">Monaco</string>
    <string name="country_eu_montenegro" translatable="false">Montenegro</string>
    <string name="country_eu_netherlands">Netherlands</string>
    <string name="country_eu_norway">Norway</string>
    <string name="country_eu_poland">Poland</string>
    <string name="country_eu_portugal" translatable="false">Portugal</string>
    <string name="country_eu_romania">Romania</string>
    <string name="quiz_play_again">Play Again</string>
    <string name="quiz_sorry_lose">Sorry %1$s you lose!</string>
    <string name="quiz_sad_face_content">Sad Emoji You Lose</string>
    <string name="quiz_try_again">Try Again</string>
    <string name="rules_one">1. Select the answer from the options given.</string>
    <string name="rules_title">Flags Quiz will check how well you know the flags of the world!</string>
    <string name="app_version">Version 1.0.1</string>
    <string name="app_copyright" translatable="false">© 2020 Anibal Ventura</string>
    <string name="rules_two">2. Each time you get an answer correct, you advance to the next flag.</string>
    <string name="rules_three">3. If you get 3 answers wrong, your quiz ends!</string>
    <string name="rules_four">4. You can return to the home screen using up or back from within the quiz screen, and this will also end your quiz.</string>
    <string name="rules_how_to_play">How to play?</string>
    <string name="quiz_you_won">You Won!</string>
    <string name="menu_share">Share</string>
    <string name="menu_history">History</string>
    <string name="history_score">Score: %1$d out of %2$d</string>
    <string name="history_continent">Continent: %1$s</string>
    <string name="menu_group_quiz" translatable="false">Quiz</string>
    <string name="menu_group_app" translatable="false">App</string>
    <string name="menu_home">Home</string>
</resources>