<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.RulesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvRulesOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/rules_one"
                android:textColor="@color/secondaryTextColor"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/tvRulesTwo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHowToPlay" />

            <TextView
                android:id="@+id/tvRulesTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/rules_two"
                android:textColor="@color/secondaryTextColor"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/tvRulesThree"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRulesOne" />

            <TextView
                android:id="@+id/tvRulesThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/rules_three"
                android:textColor="@color/secondaryTextColor"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/tvRulesFour"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRulesTwo" />

            <TextView
                android:id="@+id/tvRulesFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/rules_four"
                android:textColor="@color/secondaryTextColor"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRulesThree" />

            <TextView
                android:id="@+id/tvHowToPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules_how_to_play"
                android:textColor="@color/secondaryTextColor"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tvRulesOne"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRulesTitle"
                app:layout_constraintVertical_bias="0.25"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tvRulesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules_title"
                android:textColor="@color/secondaryTextColor"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>